--- a/views/index.erb
+++ b/views/index.erb
@@ -11,12 +11,29 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
 <body class="main-wrapper">
-  <main class="container-fluid h-100">  
-    <div class="row home h-100">
-      <div class="col-md-12 splash">
-        <h1>Hydro Neutral</h1>
+  <main class="h-100 splash">  
+      <div class="row home">
+        <div class="col-12">
+          <div>
+            <h1>Hydro Neutral</h1>
+          </div>
+        </div>
       </div>
+      <div class="row w-100" style="--bs-gutter-x: 0;">
+        <div class="col-12">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">5,000 litres saved</h5>
+              <h5 class="card-title">1,234 pipes sponsored</h5>
+              <p class="card-text">coming soon ...</p>
+              <a href="#" class="btn btn-primary">take action</a>
+            </div>
+          </div>
+        </div>
     </div>
   </main>
+  <video class="background-water" autoplay="autoplay" muted="muted" poster="none" loop>
+    <source src="/rainfall_slow_motion.mp4" type="video/mp4">
+  </video>
 </body>
 </html>
