--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -12,6 +12,7 @@
   font-size: 70px;
   color: white;
   font-weight: 700;
+  text-shadow: 2px 2px 8px #333333 !important;
 }
 .splash .home {
   flex-grow: 1;
@@ -21,6 +22,19 @@
   background-color: gray;
 }
 
+.ironbark {
+  background-image: url("/images/ironbarkhill.com_.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.hunter {
+  background-image: url("/images/huntervalleypremiummeats.com.au_.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
 .background-water {
   position: absolute;
   top: 0;
