--- a/views/index.erb
+++ b/views/index.erb
@@ -26,7 +26,11 @@
               <h5 class="card-title">5,000 litres saved</h5>
               <h5 class="card-title">1,234 pipes sponsored</h5>
               <p class="card-text">coming soon ...</p>
-              <a href="#" class="btn btn-primary">take action</a>
+              <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#takeActionModal">take action</a>
+              <div>
+              <a href="/ironbark" class="btn btn-primary-outline">Iron Bark Hill Winery</a> |
+              <a href="/hunter" class="btn btn-primary-outline">Hunter Valley Premiun Meats</a>
+              </div>
             </div>
           </div>
         </div>
@@ -35,5 +39,31 @@
   <video class="background-water" autoplay="autoplay" muted="muted" poster="none" loop>
     <source src="/rainfall_slow_motion.mp4" type="video/mp4">
   </video>
+<!-- Modal -->
+<div class="modal fade" id="takeActionModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Install on your site</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <pre style="background-color: beige;" class="p-3">
+&lt;script defer
+  src="http://127.0.0.1:9292/hnt.js">
+  var HydroNeutralConfig = (function(my){
+    my.data = () => { return { site: "MY_SITE" }; }
+    return(my)
+ })(HydroNeutralConfig || {})
+&lt;/script>
+        </pre>
+      </div>
+      <%# <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div> %>
+    </div>
+  </div>
+</div>
 </body>
 </html>
