--- a/views/ironbark.html.erb
+++ b/views/ironbark.html.erb
@@ -10,14 +10,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
-<body class="main-wrapper">
-  <main class="container-fluid h-100">  
-    <div class="row home h-100">
-      <div class="col-md-12 splash">
-        <h1>Hydro Neutral</h1>
-        <h3>Page 1</h3>
-      </div>
-    </div>
-  </main>
+<body class="ironbark">
 </body>
 </html>
