click through on image overlay

--- a/views/index.erb
+++ b/views/index.erb
@@ -50,7 +50,7 @@
       <div class="modal-body">
         <pre style="background-color: beige;" class="p-3">
 &lt;script defer
-  src="http://127.0.0.1:9292/hnt.js">
+  src="//hydro-neutral.herokuapp.com/hnt.js">
   var HydroNeutralConfig = (function(my){
     my.data = () => { return { site: "MY_SITE" }; }
     return(my)
