--- a/views/ironbark.html.erb
+++ b/views/ironbark.html.erb
@@ -11,5 +11,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
 <body class="ironbark">
+  <a href="#" btn-primary" data-bs-toggle="modal" data-bs-target="#takeActionModal">
+    <img src="/images/hydro-neutral-logo.png">
+  </a>
+  <a href="/hunter" type="button" class="btn btn-primary-outline">Next</a>
+  <div class="modal fade" id="takeActionModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <img style="top: 100px; left: 10px; width: 600px" src="/images/wine.png">
+    </div>
+  </div>
 </body>
 </html>
