--- a/views/ironbark.html.erb
+++ b/views/ironbark.html.erb
@@ -18,7 +18,7 @@
   <div class="modal fade" id="takeActionModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <img style="top: 100px; left: 10px; width: 600px" src="/images/wine.png">
+      <img style="top: 100px; left: 10px; width: 600px" src="/images/wine1.png">
     </div>
   </div>
 </body>
