--- a/views/hunter.html.erb
+++ b/views/hunter.html.erb
@@ -24,7 +24,7 @@
   <div class="modal fade" id="takeActionModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <img style="top: 100px; left: 10px; width: 600px" src="/images/meat.png">
+      <img style="top: 100px; left: 10px; width: 600px" src="/images/meat1.png">
     </div>
   </div>
 </body>
