colour and logo

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -11,6 +11,7 @@
 .splash h1 {
   font-size: 70px;
   color: white;
+  color: #4397f7;
   font-weight: 700;
   text-shadow: 2px 2px 8px #333333 !important;
 }
