--- a/views/index.erb
+++ b/views/index.erb
@@ -16,6 +16,7 @@
         <div class="col-12">
           <div>
             <h1>Hydro Neutral</h1>
+            <img src="/images/hydro-neutral-logo.png">
           </div>
         </div>
       </div>
@@ -23,9 +24,11 @@
         <div class="col-12">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">5,000 litres saved</h5>
-              <h5 class="card-title">1,234 pipes sponsored</h5>
-              <p class="card-text">coming soon ...</p>
+              <h5 class="card-title">Tracking Water usage by industry</h5>
+              <p class="card-title">
+                Our software  tracks a businesses water usage and compares it to the Industry Standard
+                and the Hunter Regions Industry based goals for water saving.
+              </p>
               <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#takeActionModal">take action</a>
               <div>
               <a href="/ironbark" class="btn btn-primary-outline">Iron Bark Hill Winery</a> |
@@ -44,7 +47,8 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Install on your site</h5>
+        <h5 class="modal-title" id="exampleModalLabel">
+          Install <span style="color: #4397f7">Digital Water Meter</span> on your site</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
